# Rutzo

./: .gitignore  README.md  asset-manifest.json  index.html
back/: Cargo.toml  README.md  rust-toolchain.toml  test.rs
back/main-contract/: Cargo.toml  build.rs  rust-toolchain.toml
back/main-contract/io/: Cargo.toml
back/main-contract/io/src/: contract_types.rs  contract_utils.rs  lib.rs  main_actions_events.rs  main_state_actions_events.rs  nft_utils.rs
back/main-contract/main_contract_io/: Cargo.toml
back/main-contract/main_contract_io/src/: lib.rs
back/main-contract/src/: contract.rs  lib.rs
back/main-contract/state/: Cargo.toml
back/main-contract/state/src/: lib.rs
back/main-contract/tests/: main-contract-nft.rs  main-contract-test.rs  main-contract.rs  utils.rs
back/main_meta/: main_contract.opt.wasm  main_contract.wasm  program_state.meta.wasm
back/management-contract/: Cargo.toml  build.rs
back/management-contract/io/: Cargo.toml
back/management-contract/io/src/: lib.rs
back/management-contract/src/: lib.rs
back/management-contract/state/: Cargo.toml
back/management-contract/tests/: main-contract-nft.rs  utils.rs
back/match-contract/: .binpath  .metahash  Cargo.toml  build.rs  match_contract.meta.txt
back/match-contract/io/src/: lib.rs
back/match-contract/match-contract-io/: Cargo.toml
back/match-contract/match-contract-io/src/: lib.rs
back/match-contract/src/: contract.rs  lib.rs
back/match-contract/state/: Cargo.toml
back/match-contract/tests/: match-contract-tests.rs
back/nft-contract/: Cargo.toml  build.rs
back/nft-contract/io/: Cargo.toml
back/nft-contract/io/src/: lib.rs
back/nft-contract/src/: contract.rs
back/nft-contract/state/: Cargo.toml
back/nft-contract/state/src/: lib.rs
back/nft-contract/tests/: nft_tests.rs  onchain-tests.rs  utils.rs
front/: .env  package-lock.json  package.json
front/Gearcomponents/FTComponents/: AllBalancesFungibleToken.tsx  Burn.tsx  LocalBalanceToken.tsx  Mint.tsx  NameFungibleToken.tsx  ReadState.tsx  SymbolFungibleToken.tsx  TotalSupply.tsx  TotalSupplyTokenFree.tsx  Transfer.tsx
front/Gearcomponents/NFTComponents/: BurnNFT.tsx  MintNFT.tsx  MyNFT.tsx  ReadStateNFT.tsx  TransferNFT.tsx
front/public/: index.html
front/src/: App.css  App.scss  App.tsx  consts.ts  index.tsx  types.d.ts
front/src/components/: index.ts
front/src/components/MintNFT/: MintNFT.tsx  index.ts
front/src/components/board-game/: BoardGame.tsx  MainGame.css
front/src/components/card/: Card.module.scss  Card.tsx  CardDialog.module.scss  CardDialog.tsx  MintNFT.tsx  MintNFT2.tsx  Modal.module.scss  Modal.tsx
front/src/components/collection-card/: CardDialog.module.scss  CollectionCard.tsx
front/src/components/default-nfts/: DefaultNFTs.tsx
front/src/components/facedowncard/: facedowncard.tsx
front/src/components/icon/: Icon.tsx
front/src/components/mint-nft-button/: MintNftButton.tsx
front/src/components/my-nft-collection/: MyNFTCollection.tsx
front/src/components/nft-collection-from/: NftCollectionFrom.tsx
front/src/components/nfts-on-sale/: NftsOnSale.tsx
front/src/components/play-button/: PlayButton.tsx
front/src/components/register-button/: RegisterButton.tsx
front/src/pages/: index.tsx
front/src/pages/game/: GameStatus.tsx  MainGame.css  MainGame.tsx  MySelectedNFT.tsx  PlayGame.tsx  game.tsx
front/src/pages/home/: FAQ.tsx  Feature.module.scss  Feature.tsx  Features.tsx  Home.modules.scss  Home.scss  Home.tsx  HowToStart.tsx
front/src/pages/marketplace/: AllNFTCollection.tsx  Marketplace.tsx  MyNFTCollection.tsx
front/src/pages/play/: EmptyCollection.scss  EmptyCollection.tsx  MainGame.tsx  MainGame_res.tsx  MyNFT.tsx  MyNFTCollection.tsx  MySelectedNFT.tsx  Play.tsx  PlayGame.tsx  Register.tsx  Selector.tsx  UnregisteredUser.tsx  UserEmptyAccount.scss  UserEmptyAccount.tsx  index.ts  play-styles.css  selectedCards.css
front/src/pages/profile/: Profile.scss  Profile.tsx  index.ts
front/src/utils/: index.ts  nft_state.meta.wasm
front_old/: package-lock.json
front_old/public/: index.html
front_old/src/components/card/: Card.module.scss  Card.tsx  CardDialog.module.scss  index.ts
front_old/src/pages/: index.tsx
front_old/src/pages/home/: Feature.module.scss  Home.tsx  HowToStart.tsx  home_styles.css
front_old/src/pages/play/: Play.tsx  index.ts
frontend/: .env  .gitignore  README.md  eslint.config.js  eslint.config.mjs  index.html  package.json  tsconfig.json  tsconfig.node.json
frontend/apps/Rutzo/: .env  README.md  index.html  package.json  postcss.config.js  rutzo.pem  tailwind.config.js
frontend/apps/Rutzo/deploy/: index.html
frontend/apps/Rutzo/src/: app.scss  app.tsx  global.css  main.tsx
frontend/src/: app.scss  app.tsx  custom.d.ts  global.css  main.tsx
frontend/src/app/: consts.ts
frontend/src/components/: index.ts
frontend/src/components/board-game/: BoardGame.tsx  BoardGame2.tsx  MainGame.css  fire.css
frontend/src/components/card/: Card.tsx
frontend/src/components/default-nfts/: DefaultNFTs.tsx
frontend/src/components/facedowncard/: facedowncard.css  facedowncard.tsx
frontend/src/components/icon/: Icon.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/mint-nft-button/: MintNftButton.tsx
frontend/src/components/nfts-on-sale/: NftsOnSale.tsx
frontend/src/components/play/: play.module.scss
frontend/src/components/play-button/: PlayButton.tsx
frontend/src/components/redirection-button/: RedirectionButton.module.scss  RedirectionButton.tsx
frontend/src/components/slick/: Slick.tsx
frontend/src/features/: cardsSlice.ts
frontend/src/hooks/: useCardsData.ts  useContractUtils.ts  useGameState.ts  useLocalBoard.ts  useVoucherUtils.ts
frontend/src/router/: RouterC.tsx
frontend_old/: .gitignore  README.md
frontend_old/apps/: README.md
frontend_old/apps/Rutzo/: index.html  tailwind.config.js
public/: 404.html  index.html
static/css/: main.26f867df.css  main.26f867df.css.map  main.9f7dac21.css  main.9f7dac21.css.map
static/js/: main.2a63d8f0.js.LICENSE.txt
(+194 files in other folders)
