[package]
name = "main-contract"
version.workspace = true
edition.workspace = true

[dependencies]
gstd.workspace = true
program-io.workspace = true
gmeta.workspace = true
gear-lib.workspace = true
hex-literal.workspace = true
primitive-types.workspace = true

[dev-dependencies]
program-state = {workspace = true, features = ["binary-vendor"]}
gtest.workspace = true
hex-literal.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
program-io.workspace = true
gmeta.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[features]
binary-vendor = []

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib", tag = "0.3.9" }
hex-literal = "0.4.1"
program-io.path = "io"
program-state.path = "state"
primitive-types = { version = "0.12", default-features = false }
