[package]
name = "nft"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
nft-io.workspace = true
gear-lib-old.workspace = true
gear-lib-derive.workspace = true
sp-core-hashing.workspace = true
gmeta.workspace = true

[dev-dependencies]
hex-literal.workspace = true
sp-core.workspace = true
gclient.workspace = true
gtest.workspace = true
tokio.workspace = true

[build-dependencies]
nft-io.workspace = true
gear-wasm-builder.workspace = true
gmeta.workspace = true