[package]
name = "main_contract_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gstd = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
sp-core = { git = "https://github.com/gear-tech/substrate.git", rev = "36699c4478ce8ae05517bb42a1b115403313e083" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
hashbrown = "0.13"
primitive-types = { version = "0.12", default-features = false, features = ["scale-info"]}
gear-lib = { git = "https://github.com/gear-dapps/gear-lib" }
tokio = "1"
light_sr25519 = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", features = ["wasm-opt"], rev = "78dfa07" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }