[package]
name = "program-state"
version.workspace = true
edition.workspace = true

[dependencies]
gstd.workspace = true
gmeta = { workspace = true, features = ["codegen"] }
program-io.workspace = true
gear-lib.workspace = true

[build-dependencies]
gear-wasm-builder = { workspace = true, features = ["metawasm"] }

[features]
binary-vendor = []