[package]
name = "nft-io"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gmeta.workspace = true
gstd.workspace = true
#gear-lib.workspace = true
gear-lib-old.workspace = true
gear-lib-derive.workspace = true
primitive-types.workspace = true
#scale-info.workspace = true
#parity-scale-codec.workspace = true
